# MCBot

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  rust.yml
src/: data.rs  font.rs  logging.rs  main.rs  recipes.rs
