[package]
name = "mcbot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15.7"
async_zip = { version = "0.0.18", features = ["full"] }
image = "0.25.10"
anyhow = "1.0.102"
tracing = "0.1"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"]}
opentelemetry-otlp = { version = "0.32.0", features = ["http-proto", "reqwest-rustls"] }
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tokio-util = "0.7.18"
strsim = "0.11.1"
regex = "1.12.4"